--- a/apex-mdapi/src/classes/MetadataDataController.cls
+++ b/apex-mdapi/src/classes/MetadataDataController.cls
@@ -33,39 +33,44 @@ public with sharing class MetadataDataController
 	
 	public PageReference constructResponse()
 	{
-		List<Node> nodes = new List<Node>();
-		String node = ApexPages.currentPage().getParameters().get('node');
-		if(node=='root')
-		{
-			// List available Metadata Types via the 'describeMetadata' API call
-			MetadataService.MetadataPort service = MetadataServiceExamples.createService();					
-			MetadataService.DescribeMetadataResult describeResult = service.describeMetadata(METADATA_API_VERSION);
-			for(MetadataService.DescribeMetadataObject metadataObject : describeResult.metadataObjects)
+		try {
+			List<Node> nodes = new List<Node>();
+			String node = ApexPages.currentPage().getParameters().get('node');
+			if(node=='root')
 			{
-				nodes.add(new FolderNode(metadataObject.xmlName, metadataObject.xmlName, false, null));
-				// Include child Metadata Types (such as CustomField, ValidationRule etc..)
-				if(metadataObject.childXmlNames!=null)
-					for(String childXmlName : metadataObject.childXmlNames)
-						if(childXmlName!=null)
-							nodes.add(new FolderNode(childXmlName, childXmlName, false, null));
+				// List available Metadata Types via the 'describeMetadata' API call
+				MetadataService.MetadataPort service = MetadataServiceExamples.createService();					
+				MetadataService.DescribeMetadataResult describeResult = service.describeMetadata(METADATA_API_VERSION);
+				for(MetadataService.DescribeMetadataObject metadataObject : describeResult.metadataObjects)
+				{
+					nodes.add(new FolderNode(metadataObject.xmlName, metadataObject.xmlName, false, null));
+					// Include child Metadata Types (such as CustomField, ValidationRule etc..)
+					if(metadataObject.childXmlNames!=null)
+						for(String childXmlName : metadataObject.childXmlNames)
+							if(childXmlName!=null)
+								nodes.add(new FolderNode(childXmlName, childXmlName, false, null));
+				}
+			}			
+			else
+			{
+				// List Metadata for the given type via the listMetadata API call
+				MetadataService.MetadataPort service = MetadataServiceExamples.createService();		
+				List<MetadataService.ListMetadataQuery> queries = new List<MetadataService.ListMetadataQuery>();		
+				MetadataService.ListMetadataQuery query = new MetadataService.ListMetadataQuery();
+				query.type_x = node;
+				queries.add(query);		
+				MetadataService.FileProperties[] fileProperties = service.listMetadata(queries, METADATA_API_VERSION);
+				
+				// Emit leaf nodes (ensure unique IDs)
+				Integer index = 0;
+				for(MetadataService.FileProperties fileProperty : fileProperties)
+					nodes.add(new LeafNode(fileProperty.fullName + ':' + index++, EncodingUtil.urlDecode(fileProperty.fullName, 'UTF-8'), false));
 			}
-		}			
-		else
-		{
-			// List Metadata for the given type via the listMetadata API call
-			MetadataService.MetadataPort service = MetadataServiceExamples.createService();		
-			List<MetadataService.ListMetadataQuery> queries = new List<MetadataService.ListMetadataQuery>();		
-			MetadataService.ListMetadataQuery query = new MetadataService.ListMetadataQuery();
-			query.type_x = node;
-			queries.add(query);		
-			MetadataService.FileProperties[] fileProperties = service.listMetadata(queries, METADATA_API_VERSION);
-			
-			// Emit leaf nodes (ensure unique IDs)
-			Integer index = 0;
-			for(MetadataService.FileProperties fileProperty : fileProperties)
-				nodes.add(new LeafNode(fileProperty.fullName + ':' + index++, EncodingUtil.urlDecode(fileProperty.fullName, 'UTF-8'), false));
+			Data = JSON.serialize(nodes);			
 		}
-		Data = JSON.serialize(nodes);
+		catch (Exception e) {
+			Data = JSON.serialize(new List<Node> { new FolderNode('error', e.getMessage(), false, null) });	
+		}
 		return null;	
 	}
 	
